<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="password">Password</string>
    <string name="first_slide">Choose Your Product</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="thirst_slide">Good Service</string>
    <string name="description">Lorem Ipsum is simply dummy text of printing and typesetting industry. Lorem Ipsum have been the industry standard dummy text ever since the  </string>
    <string name="dots">.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_products">New Products</string>
    <string name="category">Category</string>
    <string name="see_all">See All</string>
    <string name="we_provide_best_products">We provide best products.</string>
    <string name="popular_products">Popular Products</string>
    <string name="category_name">Category name</string>
    <string name="newProduct">New</string>
    <string name="product_name">Product Name</string>
    <string name="_90">90</string>
    <string name="for_additional_information_specific_to_your_mission_refer_to_the_what_to_bring_section_on_the_missionary_portal_or_in_your_paper_call_packet_or_speak_with_your_mission_president_and_his_companion">For additional information specific to your mission, refer to the “What to Bring” section on the Missionary Portal (or in your paper call packet) or speak with your mission president and his companion.</string>
    <string name="price">Price</string>
    <string name="money">$</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="_4_0">4.0</string>
    <string name="woman_t_shirt">Woman T-Shirt</string>
    <string name="_40">40</string>
    <string name="my_cart">My Cart</string>
    <string name="total_price_40">Total Price : 40$</string>
    <string name="current_date">Current Date</string>
    <string name="your_address">Your Address</string>
    <string name="create_address">Create Address</string>
    <string name="address_lane">Address Lane</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_address">Add Address</string>
    <string name="continue_to_payment">Continue To Payment</string>
    <string name="us_california">US California</string>
    <string name="shipping">Shipping</string>
    <string name="_0">$ 0</string>
    <string name="total">Total</string>
    <string name="_00">$ 00</string>
    <string name="check_out">Check Out</string>
</resources>