<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/designlogin2"
    tools:context=".activities.RegistrationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_in"
        android:textColor="@color/textHeading"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/name"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:background="@drawable/edit_text_bg"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/email"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle"
        android:background="@drawable/edit_text_bg"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/password"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:background="@drawable/edit_text_bg"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:onClick="signUp"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".4"/>

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="19sp"
        android:onClick="signIn"
        android:textStyle="bold"
        android:textColor="@color/pink"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias=".1"/>

</androidx.constraintlayout.widget.ConstraintLayout>