<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailedActivity">

    <ImageView
        android:id="@+id/detailed_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailed_tool"
        app:title="Product Detailed"
        android:background="@drawable/foreground_design"
        android:layout_width="match_parent"
        app:titleTextColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:translationY="-50dp"
        android:id="@+id/cardView"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detailed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_0"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_toStartOf="@+id/my_rating"/>
                
                <RatingBar
                    android:id="@+id/my_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:stepSize="0.1"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/detailed_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/for_additional_information_specific_to_your_mission_refer_to_the_what_to_bring_section_on_the_missionary_portal_or_in_your_paper_call_packet_or_speak_with_your_mission_president_and_his_companion"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amethysta"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money"
                    android:fontFamily="@font/amethysta"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"/>

                <TextView
                    android:id="@+id/detailed_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_90"
                    android:fontFamily="@font/amethysta"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                
                <ImageView
                    android:id="@+id/add_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/plusicon"/>

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
                
                <ImageView
                    android:id="@+id/remove_item"
                    android:layout_marginStart="8dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/iconminus"/>

            </LinearLayout>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/Add_to_cart"
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:background="@color/pink"
        android:drawableTint="@color/white"
        android:padding="14dp"
        android:drawableStart="@drawable/ic_baseline_add_shopping_cart_24"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/Buy_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_shopping_cart_24"
        android:drawableTint="@color/black"
        android:padding="14dp"
        android:background="@color/blue"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_to_cart"
        app:layout_constraintWidth_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>